--- a/TCC/src/main/resources/application.yml
+++ b/TCC/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/restSpringTCC?useTimezone=true&serverTimezone=UTC
+    url: jdbc:mysql://db:3307/restSpringTCC
     username: root
-    password: admin123
+    password: secret
   jpa:
     hibernate:
       ddl-auto: update
