--- a/TCC/docker-compose.yml
+++ b/TCC/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   mysql:
     image: mysql:latest
@@ -16,13 +14,15 @@ services:
       timeout: 20s
       retries: 10
 
-  api:
+  api1:
     build: .
     container_name: api
     ports:
       - "8080:8080"
     depends_on:
       mysql:
+        condition: service_healthy
+      hazelcast:
         condition: service_healthy
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/restSpringTCC
@@ -31,6 +31,27 @@ services:
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
       SPRING_JPA_SHOW_SQL: "false"
       SPRING_JPA_OPEN_IN_VIEW: "false"
+  hazelcast:
+    image: hazelcast/hazelcast:latest
+    ports:
+      - "5701:5701"
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:5701/hazelcast/health" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+  hazelcastManagement:
+    image: hazelcast/management-center:5.4.0
+    ports:
+      - "8081:8080"
+    environment:
+      MC_DEFAULT_CLUSTER: dev
+      MC_DEFAULT_CLUSTER_MEMBERS: hazelcast
+    depends_on:
+      hazelcast:
+        condition: service_healthy
+
+
 
 volumes:
   mysql_data:
